objects/DMAPP__Unit_Solution_Competitor__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__AM_Competitor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AM Competitor</label>
        <referenceTo>DMAPP__AM_Competitor__c</referenceTo>
        <relationshipLabel>Unit Solution Competitors</relationshipLabel>
        <relationshipName>Unit_Solution_Competitors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Unit_Solution__c</fullName>
        <label>Unit Solution</label>
        <referenceTo>DMAPP__DM_Unit_Solution__c</referenceTo>
        <relationshipLabel>Unit Solution Competitors</relationshipLabel>
        <relationshipName>Unit_Solution_Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Wallet_Perc__c</fullName>
        <formula>IF (ISNULL(DMAPP__Unit_Solution__r.DMAPP__Wallet_Size__c),
     NULL,
     IF (DMAPP__Unit_Solution__r.DMAPP__Wallet_Size__c == 0, 
             0,  
             DMAPP__Wallet_Value__c / DMAPP__Unit_Solution__r.DMAPP__Wallet_Size__c
     )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wallet Perc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Wallet_Value__c</fullName>
        <label>Wallet Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Unit Solution Competitor</label>
    <nameField>
        <label>Unit Solution Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Solution Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>